# ai-llm-engineering-cohort

./: .gitignore
day_3/: 1_Basic_RAG.ipynb  pyproject.toml
week_1/: Hello_LLM.ipynb
week_1/faq-generator/: .gitignore  PRD.md  PROJECT_STRUCTURE.md  README.md  env.example  pyproject.toml  run.py
week_1/faq-generator/config/: prompts.py
week_1/faq-generator/data/examples/: sample_businesses.json
week_1/faq-generator/docs/: api.md
week_1/faq-generator/src/: __init__.py  app.py  faq_generator.py  schema_generator.py  validators.py
week_1/faq-generator/src/utils/: __init__.py  text_processing.py  url_extractor.py
week_1/faq-generator/tests/: __init__.py  test_faq_generator.py  test_schema_generator.py  test_validators.py
